@@ -1,5 +1,17 @@
 2008-04-16  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/ce-page-wired.glade
+	  src/connection-editor/ce-page-wireless.glade
+	  src/connection-editor/page-wireless.c
+		- Fix up option constraints on MTU, Rate, and TX power
+		- Use "automatic" not "default"
+		- Add units labels to MTU, Rate, and TX Power
+
+	* src/connection-editor/nm-connection-editor.c
+		- (ce_spin_output_with_default): use 'automatic' not 'default'
+
+2008-04-16  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-dsl.c
 	  src/connection-editor/page-mobile.c
 		- fetch secrets from the keyring to populate entries with
